<resources>
    <string name="app_name">COMP580Proto</string>
    <string name="title_activity_radial_overlay">RadialOverlayActivity</string>
    <string name="numbers_and_symbols_text">Numbers and Symbols</string>
    <string name="a_to_z_text">A - Z</string>
    <string name="edit_text_text">Edit Text</string>
    <string name="most_popular_words_text">Most Popular Words</string>

    <!-- Used for letter frequency keyboard layout -->
    <string name="zone1_text">Group 1: E T A O I N S R</string>
    <string name="zone2_text">Group 2: H D L U C M F Y</string>
    <string name="zone3_text">Group 3: W G P B V K X Q</string>
    <string name="zone4_text">Group 4: J Z . , ! ? ; @</string>

    <!-- Used for standard keyboard layout -->
    <string name="menu_enter">Enter</string>
    <string name="menu_numbers">Numbers</string>
    <string name="menu_space">Space</string>
    <string name="menu_backspace">Backspace</string>

    <!-- Used for letter frequency keyboard layout -->

    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>
    <string name="menu_4">Menu 4</string>
    <string name="number_menu">Number Menu</string>

    <!-- Used for edit text layout -->
    <string name="edit_text_description">EDIT TEXT</string>
    <string name="left_arrow_description">LEFT ARROW</string>
    <string name="right_arrow_description">RIGHT ARROW</string>
    <string name="delete_description">DELETE</string>
    <string name="space_description">SPACE</string>
    <string name="help_description">HELP</string>
    <string name="back">BACK</string>
    <string name="gif_holder">gif holder</string>

    <!-- Used for Instruction page-->
    <string name="how_to_make_a_sentence"><a href="https://youtu.be/FUCW8GYV6ZQ" target="_blank">How to Make A Sentence</a></string>
    <string name="how_to_change_regions"><a href="https://youtu.be/6F3Svj92UbA" target="_blank">How to Change Regions</a></string>
    <string name="how_to_exit_a_region"><a href="https://youtu.be/FUCW8GYV6ZQ" target="_blank">How to Exit a Region</a></string>
    <string name="how_to_edit_a_sentence"><a href="https://youtu.be/RyqSqR0xe-k" target="_blank">How to Edit a Sentence</a></string>
    <string name="how_to_submit_a_sentence"><a href="https://youtu.be/fHzAJHWoPdM" target="_blank">How to Submit a Sentence</a></string>


    <string name="return_user_to_keyboard">return user to keyboard</string>



    <!--Text instructions for app-->
    <string name="HTMS">
        \u25CF Open a zone by either tapping it or holding your \n  \u00A0 \u00A0  finger on it.\n
        \u25CF You can select a letter by tapping and releasing \n  \u00A0 \u00A0 its button.\n
        \u25CF Or place your finger on the screen (not on a button),\n \u00A0 \u00A0 then drag your finger to a button and then to select.\n
        \u25CF The letter you hover over will be spoken out loud.\n
        \u25CF Exit the region after spelling a word. Then \n \u00A0 \u00A0 re-enter a new zone to start a new word.
    </string>

    <string name="HTCR">
        \u25CF You can change regions by sliding your finger over to\n \u00A0 \u00A0 one of the four buttons in the four corners and \n \u00A0 \u00A0 holding  your finger there.\n
        \u25CF Slide your finger off once it has changed and then \n \u00A0 \u00A0 enter the new zone.
    </string>

    <string name="HTER">
        \u25CF Tap select in the center of the screen.\n
        \u25CF Or slide your finger to select and lift your finger off\n \u00A0 \u00A0 the screen.\n
        \u25CF A space will automatically be added to the end of \n \u00A0 \u00A0 your word.
    </string>

    <string name="HTES">
        \u25CF Tap the EDIT TEXT button on the home screen.\n
        \u25CF You can move the cursor by using the LEFT or RIGHT\n \u00A0 \u00A0 arrow buttons.\n
        \u25CF You can add a SPACE by using the SPACE button.\n
        \u25CF Remove a letter with the DELETE button.\n
        \u25CF You can select any of these options by tapping the\n \u00A0 \u00A0 button.\n
        \u25CF Or by sliding your finger over it.
    </string>

    <string name="HTSS">
        \u25CF Tap the submit button on the home screen.\n
        \u25CF Or slide your finger to it and hold it there.\n
        \u25CF Your sentence will be read out loud.

    </string>



</resources>
