<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="edu.unc.miller.comp580proto.EditTextActivity">

    <EditText
        android:id="@+id/editactivity_text_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editable_text_box_height"
        android:focusable="false"
        android:backgroundTint="@android:color/black"
        android:textCursorDrawable="@null"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:onClick="editTextButtonFunction"
        app:srcCompat="@drawable/left_arrow"
        android:contentDescription="@string/left_arrow_description"/>

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="editTextButtonFunction"
        app:srcCompat="@drawable/right_arrow"
        android:contentDescription="@string/right_arrow_description"/>

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/editable_text_box_height"
        android:clickable="true"
        android:onClick="editTextButtonFunction"
        app:srcCompat="@drawable/delete_button"
        android:contentDescription="@string/delete_description"
        />

    <ImageView
        android:id="@+id/space_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:onClick="editTextButtonFunction"
        app:srcCompat="@drawable/space_button"
        android:contentDescription="@string/space_description"/>

    <ImageView
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="editTextButtonFunction"
        app:srcCompat="@drawable/back_circle"
        android:contentDescription="@string/help_description"
        />

</RelativeLayout>
