<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="edu.unc.miller.comp580proto.MainActivity">
    <EditText
        android:id="@+id/main_text_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editable_text_box_height" />
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/numbers_and_symbols_button"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/main_activity_button_text_size"
            android:text="@string/numbers_and_symbols_text"
            android:onClick="mainButtonClicked"/>
        <Button
            android:id="@+id/a_to_z_button"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/main_activity_button_text_size"
            android:text="@string/a_to_z_text"
            android:onClick="mainButtonClicked"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/edit_text_button"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/main_activity_button_text_size"
            android:text="@string/edit_text_text"
            android:onClick="mainButtonClicked"/>
        <Button
            android:id="@+id/most_popular_words_button"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/main_activity_button_text_size"
            android:text="@string/most_popular_words_text"
            android:onClick="mainButtonClicked"/>
    </LinearLayout>
</LinearLayout>